Fix long links overflow

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -11,9 +11,13 @@
 
 	/* Long hyperlinks can overflow post on small screens.
 	   (for example, on mobile devices)
-	   `overflow-wrap` fixes that by forcing word breaks on overflow.
-	   https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap */
+	   `overflow-wrap` in combination with `word-break` fixes that
+	   by forcing word breaks on overflow.
+	   https://stackoverflow.com/questions/17259916/difference-between-overflow-wrap-and-word-break
+	   https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap
+	   https://developer.mozilla.org/en-US/docs/Web/CSS/word-break */
 	overflow-wrap: break-word;
+	word-break: break-word;
 
 	/* When selecting text <br/>s also get selected
 	   which results in a bit of a visual clutter.
